--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "dotenv": "^17.2.0"
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.0",
+    "nodemon": "^3.1.11",
+    "pipedrive": "^30.4.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.13",
